Changes background color

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
             *{
                 margin: 5;
                 padding: 15;
-                background-color: papayawhip;
+                background-color: azure;
                     
             }
 
